fixing bug where it wouldn't evolve, and hopefully made it faster than 14 h/gen

--- a/todo.txt
+++ b/todo.txt
@@ -28,4 +28,7 @@ More saving
     top net - labeled
     stats
         timing, average score, survivors
-
+Kaiju training
+    evolve
+    overload play to allow tournaments with kaiju and nets
+    start soon
